# baba.io

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: baba.io.pc.in
detail/: CMakeLists.txt
detail/os/common/: event_registrar.cpp  event_registrar.h
detail/os/impl/: bsd_socket_impl.cpp  bsd_socket_impl.h  epoll_impl.cpp  epoll_impl.h  iocp_impl.cpp  iocp_impl.h  kqueue_impl.cpp  kqueue_impl.h  kqueue_timer_impl.cpp  kqueue_timer_impl.h  linux_timer_impl.cpp  linux_timer_impl.h  unix_file_impl.cpp  unix_file_impl.h  windows_file_impl.cpp  windows_file_impl.h  windows_timer_impl.cpp  windows_timer_impl.h  wsa_socket_impl.cpp  wsa_socket_impl.h
detail/os/reactor/epoll/: epoll_completion_strand.cpp  epoll_completion_strand.h  epoll_interrupter.cpp  epoll_interrupter.h  epoll_reactor.cpp  epoll_reactor.h  epoll_reactor_event.cpp  epoll_reactor_event.h  epoll_service.cpp  epoll_service.h
detail/os/reactor/epoll/events/: epoll_accept.cpp  epoll_accept.h  epoll_connect.cpp  epoll_connect.h  epoll_recv.cpp  epoll_recv.h  epoll_recv_from.cpp  epoll_recv_from.h  epoll_send.cpp  epoll_send.h  epoll_send_to.cpp  epoll_send_to.h  epoll_timer.cpp  epoll_timer.h
detail/os/reactor/epoll/io/: epoll_async_acceptor.h  epoll_async_connector.h  epoll_async_tcp.h  epoll_async_timer.h
detail/os/reactor/iocp/: iocp_reactor.cpp  iocp_reactor.h  iocp_reactor_event.h  iocp_service.cpp  iocp_service.h  wsa_activator.cpp  wsa_activator.h
detail/os/reactor/iocp/events/: iocp_timer.cpp  iocp_timer.h
detail/os/reactor/iocp/io/: async_timer.h
detail/os/reactor/kqueue/: kqueue_interrupter.cpp  kqueue_interrupter.h  kqueue_reactor.cpp  kqueue_reactor.h  kqueue_reactor_event.cpp  kqueue_reactor_event.h  kqueue_service.cpp  kqueue_service.h
detail/os/reactor/kqueue/events/: kqueue_accept.cpp  kqueue_accept.h  kqueue_connect.cpp  kqueue_connect.h  kqueue_recv.cpp  kqueue_recv.h  kqueue_recv_from.cpp  kqueue_recv_from.h  kqueue_send.cpp  kqueue_send.h  kqueue_send_to.cpp  kqueue_send_to.h  kqueue_timer.cpp  kqueue_timer.h
detail/os/reactor/kqueue/io/: async_timer.h
detail/os/socket/: address_family.cpp  ip_address.cpp  ip_address.h  ip_endpoint.cpp  ip_endpoint.h  socket_option.cpp  socket_option.h
inc/baba/: address_family.h  cancellable_task.h  error_code.h  io_handle.h  io_service.h  io_strand.h  io_types.h  ip_address.h  ip_endpoint.h  lifetime.h  logger.h  platform.h  semantics.h  socket_option.h  tcp_acceptor.h  tcp_connector.h  tcp_socket.h  timer.h
src/: cancellable_task.cpp  io_service.cpp  io_strand.cpp  ip_address.cpp  ip_endpoint.cpp  socket_option.cpp  tcp_acceptor.cpp  tcp_connector.cpp  tcp_socket.cpp  timer.cpp
src/pimpl/: io_service_pimpl.h  io_strand_pimpl.h  ip_address_pimpl.h  ip_endpoint_pimpl.h  socket_option_pimpl.h  tcp_acceptor_pimpl.h  tcp_connector_pimpl.h  tcp_socket_pimpl.h  timer_pimpl.h
test/canary/baba/1_tcp_client_server/: CMakeLists.txt  client.cpp  server.cpp
test/canary/utils/: signal_handler.h
test/unit/: main.cpp
test/unit/detail/epoll/: CMakeLists.txt  timer_test.cpp
